Fix minor visual issues with search filters on mobile
- [x] Add specificity on UL selector to override Wiki styles and fix mobile issue
- [x] Prevent text wrap on Namespace Filter

bug: T284701

--- a/resources/components/SearchFilters.less
+++ b/resources/components/SearchFilters.less
@@ -97,6 +97,7 @@
 		border-radius: @border-radius-base;
 		box-shadow: none;
 		min-height: @size-base;
+		white-space: nowrap;
 
 		@media screen and ( min-width: @width-breakpoint-tablet ) {
 			font-size: 0.9em;
